--- a/.github/workflows/ichigo.YAML
+++ b/.github/workflows/ichigo.YAML
@@ -29,7 +29,7 @@ jobs:
         uses: spider-man-tm/kaggle-badges@v1.2.2
         with:
           # ex. user_name: spidermandance
-          user_name: { Ichigo_E }
+          user_name: { ichigoe }
           # example of using GitHub Secrets
           # user_name: ${{ secrets.KAGGLE_USERNAME }}
 
