--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,32 +1,42 @@
-# This is a basic workflow that is manually triggered
+name: Kaggle Badges
 
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
+  push:
+    branches:
+      - main
+  schedule:
+    # You can change the cron expression to suit your needs
+    - cron: "11 11 1 * *" # 11:11 AM on the 1st of every month
   workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-        # The data type of the input
-        type: string
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  create-badges:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install Puppeteer browser
+        run: npx puppeteer browsers install chrome@126.0.6478.63
+
+      - name: Use Kaggle Badges Action
+        uses: spider-man-tm/kaggle-badges@v1.2.2
+        with:
+          # ex. user_name: spidermandance
+          user_name: ichigoe
+          # example of using GitHub Secrets
+          # user_name: ${{ secrets.KAGGLE_USERNAME }}
+
+      - name: Commit and Push SVG files
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add ./kaggle-badges/* ./kaggle-plates/*
+          git commit -m "Add generated SVG files" || echo "No changes to commit"
+          git push
