--- a/.github/workflows/ichigo.YAML
+++ b/.github/workflows/ichigo.YAML
@@ -23,13 +23,13 @@ jobs:
           node-version: "20"
 
       - name: Install Puppeteer browser
-        run: npx puppeteer browsers install chrome@126.0.6478.63
+        run: npx puppeteer browsers install chrome@131.0.6778.85
 
       - name: Use Kaggle Badges Action
-        uses: spider-man-tm/kaggle-badges@v1.2.2
+        uses: spider-man-tm/kaggle-badges@v1.3.0
         with:
           # ex. user_name: spidermandance
-          user_name: ichigoe
+          user_name: { Your Kaggle Username }
           # example of using GitHub Secrets
           # user_name: ${{ secrets.KAGGLE_USERNAME }}
 
